feat: Add scanning of local files and folders (single scan) (#558)
* feat: Add scanning of local files and folders (single scan)

Signed-off-by: Oleg Kopysov <o.kopysov@samsung.com>

* fix: Improve code coverage

Signed-off-by: Oleg Kopysov <o.kopysov@samsung.com>

* fix: Apply fixes after code review

Signed-off-by: Oleg Kopysov <o.kopysov@samsung.com>

* feat: Add scanning of local files and folders (single scan)

Signed-off-by: Oleg Kopysov <o.kopysov@samsung.com>

* fix: Improve code coverage

Signed-off-by: Oleg Kopysov <o.kopysov@samsung.com>

* fix: Apply fixes after code review

Signed-off-by: Oleg Kopysov <o.kopysov@samsung.com>

* fix: Apply fixes after code review

Signed-off-by: Oleg Kopysov <o.kopysov@samsung.com>

* fix: Update unit tests and fix the build process

Signed-off-by: Oleg Kopysov <o.kopysov@samsung.com>

---------

Signed-off-by: Oleg Kopysov <o.kopysov@samsung.com>