@@ -10,6 +10,8 @@ import com.lpvs.entity.LPVSQueue;
 import lombok.extern.slf4j.Slf4j;
 import org.kohsuke.github.GHPullRequestFileDetail;
 import org.springframework.util.FileSystemUtils;
+import org.springframework.web.util.HtmlUtils;
+import io.micrometer.common.util.StringUtils;
 
 import java.io.File;
 import java.io.FileWriter;
@@ -19,6 +21,7 @@ import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.nio.file.StandardCopyOption;
 import java.util.Arrays;
 import java.util.List;
 
@@ -126,6 +129,43 @@ public class LPVSFileUtil {
     }
 
     /**
+     * Copies files from a source path to a destination directory path.
+     *
+     * @param sourcePath the path to the source file or directory to be copied
+     * @param directoryPath the path to the destination directory where the files will be copied
+     * @throws IOException if an I/O error occurs
+     */
+    public static void copyFiles(String sourcePath, String directoryPath) throws IOException {
+        deleteIfExists(directoryPath);
+        File destination = new File(directoryPath);
+        File source = new File(sourcePath);
+        if (destination.mkdirs()) {
+            if (source.isDirectory()) {
+                File[] files = source.listFiles();
+                if (files != null) {
+                    for (File file : files) {
+                        if (file.isFile()) {
+                            Files.copy(
+                                    file.toPath(),
+                                    new File(destination, file.getName()).toPath(),
+                                    StandardCopyOption.REPLACE_EXISTING);
+                        } else if (file.isDirectory()) {
+                            File destinationSubdir = new File(destination, file.getName());
+                            destinationSubdir.mkdirs();
+                            copyFiles(file.getAbsolutePath(), destinationSubdir.getAbsolutePath());
+                        }
+                    }
+                }
+            } else if (source.isFile()) {
+                Files.copy(
+                        source.toPath(),
+                        new File(destination, source.getName()).toPath(),
+                        StandardCopyOption.REPLACE_EXISTING);
+            }
+        }
+    }
+
+    /**
      * Deletes the specified directory if it exists.
      *
      * @param path The path of the directory to be deleted.
@@ -176,11 +216,10 @@ public class LPVSFileUtil {
      */
     public static String getScanResultsJsonFilePath(LPVSQueue webhookConfig) {
         String fileName = null;
-        if (webhookConfig.getHeadCommitSHA() == null
-                || webhookConfig.getHeadCommitSHA().isBlank()) {
+        if (StringUtils.isBlank(webhookConfig.getHeadCommitSHA())) {
             fileName = LPVSPayloadUtil.getPullRequestId(webhookConfig);
         } else {
-            fileName = webhookConfig.getHeadCommitSHA();
+            fileName = HtmlUtils.htmlEscape(webhookConfig.getHeadCommitSHA());
         }
 
         return System.getProperty("user.home")
